写错了，这个是can的电机驱动的，不是Modbus

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CRC16_Modbus)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CRC16_Modbus main.cpp crc16_modbus.c)
+add_executable(CRC16_Modbus main.cpp crc16_modbus.c modbus.c)
